[gd_scene load_steps=5 format=2]

[ext_resource path="res://menus/LevelCompleteMenu.gd" type="Script" id=1]
[ext_resource path="res://menus/msgFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://menus/levelStatIndicator.tscn" type="PackedScene" id=3]
[ext_resource path="res://menus/buttonFont.tres" type="DynamicFont" id=4]

[node name="LevelCompleteMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="MarginContainer" type="MarginContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1019.0
margin_top = -744.0
margin_right = 1019.0
margin_bottom = 744.0

[node name="ColorRect" type="ColorRect" parent="Control/MarginContainer"]
margin_right = 2038.0
margin_bottom = 1488.0
color = Color( 0.0509804, 0.0509804, 0.0509804, 1 )

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer"]
margin_right = 2038.0
margin_bottom = 1488.0
custom_constants/margin_right = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/MarginContainer"]
margin_left = 40.0
margin_right = 1998.0
margin_bottom = 1448.0
custom_constants/separation = 0

[node name="LevelCompleteLabel" type="Label" parent="Control/MarginContainer/MarginContainer/VBoxContainer"]
margin_right = 1958.0
margin_bottom = 206.0
custom_fonts/font = ExtResource( 2 )
text = "Level Complete"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 206.0
margin_right = 1958.0
margin_bottom = 1020.0

[node name="thisRunStats" parent="Control/MarginContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_right = 1958.0

[node name="overallStats" parent="Control/MarginContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 409.0
margin_right = 1958.0
margin_bottom = 814.0

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 1020.0
margin_right = 1958.0
margin_bottom = 1322.0
custom_constants/margin_top = 40

[node name="Buttons" type="GridContainer" parent="Control/MarginContainer/MarginContainer/VBoxContainer/MarginContainer"]
margin_left = 243.0
margin_top = 40.0
margin_right = 1715.0
margin_bottom = 302.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
custom_constants/vseparation = 30
custom_constants/hseparation = 40
columns = 2

[node name="NextButton" type="Button" parent="Control/MarginContainer/MarginContainer/VBoxContainer/MarginContainer/Buttons"]
margin_right = 640.0
margin_bottom = 116.0
custom_fonts/font = ExtResource( 4 )
text = "Next Level"

[node name="LastCheckpointButton" type="Button" parent="Control/MarginContainer/MarginContainer/VBoxContainer/MarginContainer/Buttons"]
margin_left = 680.0
margin_right = 1472.0
margin_bottom = 116.0
custom_fonts/font = ExtResource( 4 )
text = " Load Checkpoint "

[node name="RestartButton" type="Button" parent="Control/MarginContainer/MarginContainer/VBoxContainer/MarginContainer/Buttons"]
margin_top = 146.0
margin_right = 640.0
margin_bottom = 262.0
custom_fonts/font = ExtResource( 4 )
text = " Restart Level "

[node name="QuitButton" type="Button" parent="Control/MarginContainer/MarginContainer/VBoxContainer/MarginContainer/Buttons"]
margin_left = 680.0
margin_top = 146.0
margin_right = 1472.0
margin_bottom = 262.0
custom_fonts/font = ExtResource( 4 )
text = "Quit To Menu"

[connection signal="pressed" from="Control/MarginContainer/MarginContainer/VBoxContainer/MarginContainer/Buttons/NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="Control/MarginContainer/MarginContainer/VBoxContainer/MarginContainer/Buttons/LastCheckpointButton" to="." method="_on_LastCheckpointButton_pressed"]
[connection signal="pressed" from="Control/MarginContainer/MarginContainer/VBoxContainer/MarginContainer/Buttons/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="Control/MarginContainer/MarginContainer/VBoxContainer/MarginContainer/Buttons/QuitButton" to="." method="_on_QuitButton_pressed"]
